--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   web:
     restart: always
     build: .
-    command: bash -c "sleep 10 && python manage.py makemigrations && python manage.py migrate && python manage.py startserver 0.0.0.0:8000"
+    command: bash -c "sleep 10 && python manage.py runserver 0.0.0.0:8000"
     container_name: django01
     links:
       - db
