--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,12 @@ services:
       - ./src:/src
     expose:
       - "8000"
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./config/nginx/:etc/nginx/conf.d/
+    ports:
+      - "80:80"
+      - "443:443"
+    links:
+      - web
