--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3.3"
 services:
   db:
     restart: always
@@ -17,7 +17,7 @@ services:
   nginx:
     image: nginx:latest
     volumes:
-      - ./config/nginx/:etc/nginx/conf.d/
+      - ./config/nginx/:/etc/nginx/conf.d/
     ports:
       - "80:80"
       - "443:443"
