Link volumes between django and nginx containers.
Static files are now served correctly. And we're off! :)

--- a/config/nginx/sc2.conf
+++ b/config/nginx/sc2.conf
@@ -1,11 +1,11 @@
 server {
 
     listen 80;
-    server_name not.configured.example.com;
+    server_name default;
     charset utf-8;
 
     location /static {
-        alias /config/www/static;
+        alias /static;
     }
 
     location / {
