--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ env:
   - DOCKER_COMPOSE_VERSION=1.14.0
   - TOX_ENV=py35
 
+branches:
+  only:
+    - /.*/
+
 before_install:
   - sudo sh -c 'echo "deb https://apt.dockerproject.org/repo ubuntu-precise main" > /etc/apt/sources.list.d/docker.list'
   - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
@@ -26,5 +30,6 @@ before_install:
 script:
   - tox -e $TOX_ENV
   - sh tox_script.sh
+
 install:
   - pip install tox
