--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ language: python
 python: 3.5
 
 env:
-  - DOCKER_VERSION=17.03.1
+  - DOCKER_ENGINE_VERSION=1.12.3
   - DOCKER_COMPOSE_VERSION=1.14.0
   - TOX_ENV=py35
 
@@ -21,7 +21,7 @@ before_install:
   - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
   - sudo apt-get update
   - sudo apt-key update
-  - sudo apt-get --force-yes -qqy -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" install docker-engine="${DOCKER_VERSION}~precise"
+  - sudo apt-get --force-yes -qqy -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" install docker-engine="${DOCKER_ENGINE_VERSION}~precise"
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
