--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ language: python
 python: 3.5
 
 env:
-  - DOCKER_ENGINE_VERSION=1.12.3
+  - DOCKER_ENGINE_VERSION=1.12.3-0
   - DOCKER_COMPOSE_VERSION=1.14.0
   - TOX_ENV=py35
 
