--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ python: 3.5
 
 env:
   - DOCKER_ENGINE_VERSION=1.12.3-0
-  - DOCKER_COMPOSE_VERSION=1.14.0
-  - TOX_ENV=py35
+    DOCKER_COMPOSE_VERSION=1.14.0
+    TOX_ENV=py35
 
 branches:
   only:
