--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,8 @@ script:
   - tox -e ${TOX_ENV}
   - sh tox_script.sh
 
+after_success:
+  coveralls
+
 install:
-  - pip install tox
+  - pip install tox coveralls
