--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,9 @@
 [tox]
 envlist = {py35,py36}-django111
+
 [testenv]
+passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 deps=
     -rrequirements.txt
+    coveralls
+
