Add potential fix for coverage report in tox.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,12 @@ before_install:
 
 script:
   - tox -e ${TOX_ENV}
-  - sh tox_script.sh
+  - sh tests/tox_script.sh
 
 after_success:
   codecov
 
 install:
   - pip install tox
-  - pip install coveralls
+  - pip install coverage
   - pip install codecov
