--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ python: 3.5
 env:
   - DOCKER_ENGINE_VERSION=17.06.0~ce-0
     DOCKER_COMPOSE_VERSION=1.14.0
-    TOX_ENV=py35
 
 branches:
   only:
@@ -29,7 +28,7 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 
 script:
-  - sh tests/tox_script.sh
+  - sh tests/base_script.sh
 
 after_success:
   codecov
