--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,15 @@ services:
     restart: always
     build: .
     container_name: django01
+    environment:
+      TRAVIS: ${TRAVIS}
+      TRAVIS_JOB_ID: ${TRAVIS_JOB_ID}
+      TRAVIS_BRANCH: ${TRAVIS_BRANCH}
+      TRAVIS_PULL_REQUEST: ${TRAVIS_PULL_REQUEST}
     links:
       - db
     volumes:
-      - ./src:/src
-      - ./.coverage:./.coverage
+      - ./tests:/tests
       - static:/var/www/static
     expose:
       - "8000"
