Share tests folder to see coverage report in Travis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     links:
       - db
     volumes:
+      - ./tests:/application/tests/
       - static:/var/www/static
     expose:
       - "8000"
