--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     image: postgres:latest
     container_name: db01
 
-  web:
+  api:
     image: kohonski/sc2league-server_backend
     build: .
-    container_name: django01
+    container_name: api
     links:
       - db
     volumes:
@@ -18,6 +18,7 @@ services:
 
   nginx:
     image: kohonski/sc2league-server_nginx
+    container_name: nginx
     build: ./config/nginx/
     volumes:
       - static:/static
@@ -25,7 +26,7 @@ services:
       - "80:80"
       - "443:443"
     links:
-      - web
+      - api
 
 volumes:
   static: 
