--- a/config/nginx/sites-available/default.conf
+++ b/config/nginx/sites-available/default.conf
@@ -3,6 +3,10 @@ server {
   listen [::]:80 default_server;
   server_name localhost;
 
+  location /static {
+    alias /static;
+  } 
+
   location / {
     proxy_pass http://api:8000;
     proxy_set_header Host $host;
