--- a/config/nginx/sites-available/default.conf
+++ b/config/nginx/sites-available/default.conf
@@ -1,7 +1,7 @@
 server {
   listen 80 default_server;
   listen [::]:80 default_server;
-  server_name localhost;
+  server_name www.nicbiddell.com nicbiddell.com;
 
   location /static {
     alias /static;
