--- a/config/nginx/sites-available/default.conf
+++ b/config/nginx/sites-available/default.conf
@@ -1,7 +1,14 @@
 server {
   listen 80 default_server;
   listen [::]:80 default_server;
-  server_name "";
+  server_name _;
+
+	return 301 https://$server_name$request_uri;
+}
+
+server {
+  listen 443 ssl http2 default_server;
+  listen [::]:433 ssl http2 default_server;
 
   location /static {
     alias /static;
