--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     image: kohonski/sc2league-server_nginx
     container_name: nginx
     environment:
-      - DOCKER_NGINX_LETSENCRYPT=F
+      - USE_LETSENCRYPT=F
       - DOMAIN=localhost
     build: ./config/nginx/
     volumes:
